<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_print"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_print_24"
        app:title="@string/print" />

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_motion"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_gamepad_24"
        app:title="@string/motion" />

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_scan"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_track_changes_24"
        app:title="@string/scan" />

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_settings"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_settings_24"
        app:title="@string/settings" />

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_active"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_power_settings_new_24"
        app:title="@string/active" />

    <com.rokobit.almaz.ui.CardBtnView
        android:id="@+id/menu_open_psd_to_layouts"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="8dp"
        app:title="Test only. Open PSD to layouts" />

</GridLayout>