<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rokobit.almaz.screen.Gamepad
        android:id="@+id/gamepad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:buttonWidth="37"
        app:arrowStrokeWidth="10"
        app:arrowSize="12"
        app:layout_constraintDimensionRatio="V,1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clParams"
        app:layout_constraintTop_toBottomOf="@id/iv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#fafafa"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gamepad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv">

        <TextView
            android:id="@+id/tvWorkpieceSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workpiece_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWidthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWorkpieceSizeTitle" />

        <TextView
            android:id="@+id/tvWidthValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="69.35 cm"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvWidthTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvWidthTitle"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tvHeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWidthTitle" />

        <TextView
            android:id="@+id/tvHeightValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="91.25 cm"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvHeightTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHeightTitle"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tvPointLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/point_location"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeightTitle" />

        <TextView
            android:id="@+id/tvXTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPointLocation" />

        <TextView
            android:id="@+id/tvXValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvXTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvXTitle"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tvYTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Y"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvXValue" />

        <TextView
            android:id="@+id/tvYValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvYTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvYTitle"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>